20170210: boton de sonido on/off, numeros escondidos * cambiados los nombres de algunas propiedades * los numeros ya no se muestran en los botones, el indice de cada boton se guarda ahora en el tag + boton para detener y reanudar la musica, asi como silenciar los efectos de sonido

--- a/app/src/main/res/values/buttons.xml
+++ b/app/src/main/res/values/buttons.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <array name="buttons">
-        <item>@id/Button00</item>
-        <item>@id/Button01</item>
-        <item>@id/Button02</item>
-        <item>@id/Button03</item>
-        <item>@id/Button04</item>
-        <item>@id/Button05</item>
-        <item>@id/Button06</item>
-        <item>@id/Button07</item>
-        <item>@id/Button08</item>
+    <array name="game_buttons">
+        <item>@id/button_00</item>
+        <item>@id/button_01</item>
+        <item>@id/button_02</item>
+        <item>@id/button_03</item>
+        <item>@id/button_04</item>
+        <item>@id/button_05</item>
+        <item>@id/button_06</item>
+        <item>@id/button_07</item>
+        <item>@id/button_08</item>
     </array>
 </resources>
