--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,12 +29,21 @@ android:layout_height="wrap_content"
       
 <Button android:layout_height="wrap_content"
  android:layout_centerHorizontal="true"
-  android:id="@+id/PlayButton"
+  android:id="@+id/button_play"
    android:text="Play"
     android:textSize="28px" 
     android:layout_width="fill_parent"
      android:layout_below="@+id/TitleText"
       android:layout_margin="20px">
       </Button>
-      
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignEnd="@+id/button_play"
+        android:layout_alignStart="@+id/button_play"
+        android:layout_below="@+id/button_play"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/list_view_scores" />
+
 </RelativeLayout>
