20170218: la musica empieza despues de escoger la imagen * musica despues de escoger la imagen + encapsulada la creacion y destruccion de servicios en metodos estaticos de la clase Util

--- a/app/src/main/res/values/carrousel.xml
+++ b/app/src/main/res/values/carrousel.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <array name="game_buttons">
+    <array name="carrousel_images">
         <item>@drawable/illidan</item>
         <item>@drawable/communist_party</item>
         <item>@drawable/nobushi</item>
