--- a/app/src/main/res/layout/activity_carrousel.xml
+++ b/app/src/main/res/layout/activity_carrousel.xml
@@ -8,5 +8,6 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="center"
-        android:layout_weight="1.00" />
+        android:layout_weight="1.00"
+        android:id="@+id/carrousel_image" />
 </LinearLayout>
